--- a/src/KeePassWin/Views/MainPage.xaml
+++ b/src/KeePassWin/Views/MainPage.xaml
@@ -1,8 +1,9 @@
-﻿<Page
-    x:Class="KeePassWin.MainPage"
+﻿<mvvm:Page
+    x:Class="KeePassWin.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KeePassWin"
+    xmlns:local="using:KeePassWin.Views"
+    xmlns:mvvm="using:KeePassWin.Mvvm"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -10,4 +11,4 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     </Grid>
-</Page>
+</mvvm:Page>
