--- a/src/KeePassWin/App.xaml
+++ b/src/KeePassWin/App.xaml
@@ -1,8 +1,16 @@
-﻿<Application
+﻿<prism:PrismAutofacApplication
     x:Class="KeePassWin.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:KeePassWin"
+    xmlns:prism="using:Prism.Autofac.Windows"
     RequestedTheme="Light">
 
-</Application>
+    <prism:PrismAutofacApplication.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///Themes/KeePassWinStyles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </prism:PrismAutofacApplication.Resources>
+</prism:PrismAutofacApplication>
