--- a/src/KeePassWin/Views/DatabasePage.xaml
+++ b/src/KeePassWin/Views/DatabasePage.xaml
@@ -2,16 +2,78 @@
                                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                                 xmlns:m="using:KeePassWin.Mvvm"
                                  xmlns:local="using:KeePassWin.Views"
                                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                                  xmlns:prismMvvm="using:Prism.Windows.Mvvm"
+                                 xmlns:models="using:KeePass.Models"
                                  prismMvvm:ViewModelLocator.AutoWireViewModel="True"
                                  mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <TextBlock x:Name="Title" Grid.Row="0"
+                   HorizontalAlignment="Center" VerticalAlignment="Center"
                    Style="{ThemeResource HeaderTextBlockStyle}"
-                   Text="{x:Bind Path=Model.Database.Name, Mode=OneWay}" />
+                   Text="{x:Bind Path=Model.Group.Name, Mode=OneWay}" />
+        <RelativePanel Grid.Row="1">
+                <ListView x:Name="GroupList" ItemsSource="{x:Bind Path=Model.Group.Groups, Mode=OneWay}" 
+                          HorizontalAlignment="Left" VerticalAlignment="Top" HorizontalContentAlignment="Left"
+                          IsItemClickEnabled="True"
+                          m:MvvmExtensions.Command="{x:Bind Model.GroupClickCommand, Mode=OneWay}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:IKeePassGroup">
+                            <StackPanel Orientation="Horizontal">
+                                <SymbolIcon Symbol="Folder" />
+                                <TextBlock Margin="10,0,0,0" Text="{x:Bind Path=Name}" TextTrimming="WordEllipsis" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <ListView x:Name="EntryList" ItemsSource="{x:Bind Path=Model.Group.Entries, Mode=OneWay}" 
+                          HorizontalAlignment="Left" VerticalAlignment="Top" HorizontalContentAlignment="Stretch"
+                          IsItemClickEnabled="True" 
+                          m:MvvmExtensions.Command="{x:Bind Model.EntryClickCommand, Mode=OneWay}"
+                          RelativePanel.Below="GroupList">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="models:IKeePassEntry">
+                            <StackPanel Orientation="Horizontal">
+                                <SymbolIcon Symbol="Page" />
+                                <TextBlock Margin="10,0,0,0" Text="{x:Bind Path=Title}" TextTrimming="WordEllipsis" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+        </RelativePanel>
+
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState x:Name="WideState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="600" />
+                    </VisualState.StateTriggers>
+
+                    <VisualState.Setters>
+                        <Setter Target="EntryList.(RelativePanel.RightOf)" Value="GroupList" />
+                        <Setter Target="EntryList.(RelativePanel.Below)" Value="" />
+                    </VisualState.Setters>
+                </VisualState>
+
+                <VisualState x:Name="NarrowState">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+
+                    <VisualState.Setters>
+                        <Setter Target="EntryList.(RelativePanel.RightOf)" Value="" />
+                        <Setter Target="EntryList.(RelativePanel.Below)" Value="GroupList" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
     </Grid>
 </prismMvvm:SessionStateAwarePage>
