--- a/src/KeePassWin/Themes/KeePassWinStyles.xaml
+++ b/src/KeePassWin/Themes/KeePassWinStyles.xaml
@@ -88,6 +88,14 @@
         </Setter>
     </Style>
 
+    <Style x:Key="EntryItemTitleStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="16" />
+    </Style>
+
+    <Style x:Key="EntryItemUserNameStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="12" />
+    </Style>
+
     <Style x:Key="SplitViewMenuSymbolIconStyle" TargetType="SymbolIcon">
         <Setter Property="Margin" Value="14,0,0,0" />
         <Setter Property="VerticalAlignment" Value="Center" />
