--- a/src/KeePassWin/Views/DatabasePage.xaml
+++ b/src/KeePassWin/Views/DatabasePage.xaml
@@ -2,7 +2,6 @@
                                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                                 xmlns:m="using:KeePassWin.Mvvm"
                                  xmlns:local="using:KeePassWin.Views"
                                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                                  xmlns:mvvm="using:KeePassWin.Mvvm"
@@ -50,10 +49,17 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
-        <ListView Grid.Row="0" ItemsSource="{x:Bind Path=Model.Parents, Mode=OneWay}"
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <AutoSuggestBox Grid.Row="0" Grid.Column="1"
+            QueryIcon="Find"
+            QuerySubmitted="AutoSuggestBox_QuerySubmitted" />
+        <ListView Grid.Row="0" Grid.Column="0"
+                  ItemsSource="{x:Bind Path=Model.Parents, Mode=OneWay}"
                   IsItemClickEnabled="True"
-                  m:MvvmExtensions.Command="{x:Bind Path=Model.GoToParentCommand, Mode=OneWay}">
+                  mvvm:MvvmExtensions.Command="{x:Bind Path=Model.GoToParentCommand, Mode=OneWay}">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal" />
@@ -68,14 +74,15 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <TextBlock Grid.Row="1"
+        <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                    HorizontalAlignment="Center" VerticalAlignment="Center"
                    Style="{ThemeResource HeaderTextBlockStyle}"
                    Text="{x:Bind Path=Model.Group.Name, Mode=OneWay}" />
-        <ListView Grid.Row="2" ItemsSource="{x:Bind Path=Model.Items, Mode=OneWay}" 
+        <ListView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
+                  ItemsSource="{x:Bind Path=Model.Items, Mode=OneWay}" 
                   HorizontalAlignment="Left" VerticalAlignment="Top" HorizontalContentAlignment="Left"
                   IsItemClickEnabled="True"
-                  m:MvvmExtensions.Command="{x:Bind Model.ItemClickCommand, Mode=OneWay}">
+                  mvvm:MvvmExtensions.Command="{x:Bind Model.ItemClickCommand, Mode=OneWay}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
