--- a/src/KeePassWin/Views/DatabasePage.xaml
+++ b/src/KeePassWin/Views/DatabasePage.xaml
@@ -18,7 +18,6 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <AutoSuggestBox x:Name="SearchBox" Grid.Row="0"
@@ -58,9 +57,8 @@
                         </DataTemplate>
                     </controls:TreeView.ItemTemplate>
                 </controls:TreeView>
-                <ListView RelativePanel.RightOf="treeView" ItemsSource="{x:Bind Path=Model.Group.Entries, Mode=OneWay}" ItemTemplate="{StaticResource KeePassEntryTemplate}">
-                    
-                </ListView>
+                <ListView RelativePanel.RightOf="treeView" 
+                          ItemsSource="{x:Bind Path=Model.Group.Entries, Mode=OneWay}" ItemTemplate="{StaticResource KeePassEntryTemplate}" />
             </RelativePanel>
         </Grid>
         <Grid x:Name="NarrowView" Grid.Row="3">
