--- a/src/KeePassWin/Views/SearchPage.xaml
+++ b/src/KeePassWin/Views/SearchPage.xaml
@@ -20,7 +20,7 @@
         <AutoSuggestBox Text="{x:Bind Path=Model.Text, Mode=TwoWay}" TextChanged="AutoSuggestBox_TextChanged" QueryIcon="Find" />
         <ListView Grid.Row="1"
                   ItemsSource="{x:Bind Path=Model.Items, Mode=OneWay}" 
-                  HorizontalAlignment="Left" VerticalAlignment="Top" HorizontalContentAlignment="Left"
+                  HorizontalAlignment="Stretch" VerticalAlignment="Top" HorizontalContentAlignment="Stretch"
                   IsItemClickEnabled="True"
                   mvvm:MvvmExtensions.Command="{x:Bind Model.ItemClickCommand, Mode=OneWay}"
                   Margin="0,10,0,0"
